--- a/src/main/resources/templates/listarAp.html
+++ b/src/main/resources/templates/listarAp.html
@@ -1,12 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html th:include="template :: modelo">
+<div th:fragment="conteudo">
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Home</th>
+                <th scope="col">NUmero de portas</th>
+                <th scope="col">Quantidade de quartos</th>
+                <th scope="col">Tipo</th>
+                <th scope="col">Proprietário</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each=" apartamento : ${apartamentos}">
+                <th scope="row" th:text="${apartamento.id"></th>
+                <td scope="row" th:text="${apartamento.numPortas"></td>
+                <td scope="row" th:text="${apartamento.qtdQuartos"></td>
+                <td scope="row" th:text="${apartamento.tipo"></td>
+                <td scope="row" th:text="${apartamento.propietario"></td>
+                <td>
+                    <a th:href="@{/excluirAp(id=${apartamento.id})}">Excluir</a>
+                    <a th:href="@{/editarAp(id=${apartamento.id})}">Editar</a>
+
+                </td>
+            </tr>
+        </tbody>
+
+    </table>
+</div>
+
 </html>
