--- a/src/main/resources/templates/cadastrarAp.html
+++ b/src/main/resources/templates/cadastrarAp.html
@@ -1,12 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html th:include="template :: modelo">
+<div th:fragment="conteudo">
+    <form action="/novoapartamento" method="post" th:object="${apartamento}">
+        <div class="mb-3">
+            <input type="hidden" th:field="*{id}">
+            <label for="numPortas" class="form-label">Número de Portas</label>
+            <input type="text" class="form-control" th:field="*{numPortas}">
+        </div>
+        <div class="mb-3">
+            <label for="qtdQuartos" class="form-label">Quantidade de quartos</label>
+            <input type="text" class="form-control" th:field="*{qtdQuartos}">
+        </div>
+        <div class="mb-3">
+            <label for="tipo" class="form-label">Tipo</label>
+            <input type="text" class="form-control" th:field="*{tipo}">
+        </div>
+        <div class="mb-3">
+            <label for="propietario" class="form-label">Propietário</label>
+            <input type="text" class="form-control" th:field="*{propietario}">
+        </div>
+        
+        <button type="submit" class="btn btn-primary">Alterar</button>
+    </form>
+</div>
+
 </html>
