--- a/src/main/resources/templates/listarProp.html
+++ b/src/main/resources/templates/listarProp.html
@@ -1,27 +1,29 @@
 <html th:include="template :: modelo">
 <div th:fragment="conteudo">
-    <form action="/novo" method="post" th:object="${contato}">
-        <div class="mb-3">
-            <label for="nome" class="form-label">Nome</label>
-            <input type="text" class="form-control" th:field="*{nome}">
-        </div>
-        <div class="mb-3">
-            <label for="endereco" class="form-label">Endereço</label>
-            <input type="text" class="form-control" th:field="*{endereco}">
-        </div>
-        <div class="mb-3">
-            <label for="telefone" class="form-label">Telefone</label>
-            <input type="text" class="form-control" th:field="*{telefone}">
-        </div>
-        <div class="mb-3">
-            <label for="descricao" class="form-label">Tipo</label>
-            <select th:field="*{tipo.id}" class="form-control">
-                <option th:each="t : ${tipos}" th:value="${t.id}" th:text="${t.descricao}">
-                </option>
-            </select>
-        </div>
-        <button type="submit" class="btn btn-primary">Gravar</button>
-    </form>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Home</th>
+                <th scope="col">NUmero de portas</th>
+                <th scope="col">Quantidade de quartos</th>
+                <th scope="col">Tipo</th>
+                <th scope="col">Proprietário</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each=" propietario : ${propietarios">
+                <th scope="row" th:text="${propietario.id"></th>
+                <td scope="row" th:text="${propietario.nome"></td>
+                <td scope="row" th:text="${propietario.telefone"></td>
+                <td>
+                    <a th:href="@{/excluirAp(id=${propietario.id})}">Excluir</a>
+                    <a th:href="@{/editarAp(id=${propietario.id})}">Editar</a>
+
+                </td>
+            </tr>
+        </tbody>
+
+    </table>
 </div>
 
 </html>
