--- a/src/main/resources/templates/listarAp.html
+++ b/src/main/resources/templates/listarAp.html
@@ -4,7 +4,7 @@
         <thead>
             <tr>
                 <th scope="col">Home</th>
-                <th scope="col">NUmero de portas</th>
+                <th scope="col">Número de portas</th>
                 <th scope="col">Quantidade de quartos</th>
                 <th scope="col">Tipo</th>
                 <th scope="col">Proprietário</th>
