--- a/src/main/resources/templates/listarProp.html
+++ b/src/main/resources/templates/listarProp.html
@@ -3,23 +3,18 @@
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Home</th>
-                <th scope="col">NUmero de portas</th>
-                <th scope="col">Quantidade de quartos</th>
-                <th scope="col">Tipo</th>
-                <th scope="col">Proprietário</th>
+                <th scope="col">Nome do propietário</th>
+                <th scope="col">Telefone</th>
+                <th scope="col">Id Propietario</th>
+
+
             </tr>
         </thead>
         <tbody>
-            <tr th:each=" propietario : ${propietarios">
-                <th scope="row" th:text="${propietario.id"></th>
-                <td scope="row" th:text="${propietario.nome"></td>
-                <td scope="row" th:text="${propietario.telefone"></td>
-                <td>
-                    <a th:href="@{/excluirAp(id=${propietario.id})}">Excluir</a>
-                    <a th:href="@{/editarAp(id=${propietario.id})}">Editar</a>
-
-                </td>
+            <tr th:each="propietario : ${propietarios}">
+                <td scope="row" th:text="${propietario.nome}"></td>
+                <td scope="row" th:text="${propietario.telefone}"></td>
+                <th scope="row" th:text="${propietario.idProp}"></th>
             </tr>
         </tbody>
 
